@@ -11,12 +11,14 @@ import org.springframework.ai.document.Document;
 import org.springframework.ai.embedding.Embedding;
 import org.springframework.ai.embedding.EmbeddingClient;
 import org.springframework.ai.embedding.EmbeddingResponse;
+import org.springframework.ai.embedding.EmbeddingUtil;
 import org.springframework.util.Assert;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
 public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
@@ -26,6 +28,8 @@ public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
 	private final OpenAIClient azureOpenAiClient;
 
 	private final String model;
+
+	private final AtomicInteger embeddingDimensions = new AtomicInteger(-1);
 
 	public AzureOpenAiEmbeddingClient(OpenAIClient azureOpenAiClient) {
 		this(azureOpenAiClient, "text-embedding-ada-002");
@@ -56,11 +60,7 @@ public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
 	}
 
 	private List<Double> extractEmbeddingsList(Embeddings embeddings) {
-		return embeddings.getData()
-			.stream()
-			.map(EmbeddingItem::getEmbedding)
-			.flatMap(List::stream)
-			.collect(Collectors.toList());
+		return embeddings.getData().stream().map(EmbeddingItem::getEmbedding).flatMap(List::stream).toList();
 	}
 
 	@Override
@@ -68,7 +68,7 @@ public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
 		logger.debug("Retrieving embeddings");
 		Embeddings embeddings = this.azureOpenAiClient.getEmbeddings(this.model, new EmbeddingsOptions(texts));
 		logger.debug("Embeddings retrieved");
-		return embeddings.getData().stream().map(emb -> emb.getEmbedding()).collect(Collectors.toList());
+		return embeddings.getData().stream().map(emb -> emb.getEmbedding()).toList();
 	}
 
 	@Override
@@ -89,8 +89,6 @@ public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
 		Map<String, Object> metadata = new HashMap<>();
 		metadata.put("model", model);
 		metadata.put("prompt-tokens", embeddingsUsage.getPromptTokens());
-		// NOTE, not in API of AzureAI - metadata.put("completion-tokens",
-		// embeddingsUsage.getCompletionTokens());
 		metadata.put("total-tokens", embeddingsUsage.getTotalTokens());
 		return metadata;
 	}
@@ -104,6 +102,14 @@ public class AzureOpenAiEmbeddingClient implements EmbeddingClient {
 			data.add(embedding);
 		}
 		return data;
+	}
+
+	@Override
+	public int dimensions() {
+		if (this.embeddingDimensions.get() < 0) {
+			this.embeddingDimensions.set(EmbeddingUtil.dimensions(this, this.model));
+		}
+		return this.embeddingDimensions.get();
 	}
 
 }
